update to pytorch 1.2

--- a/docs/source/quickstart.ipynb
+++ b/docs/source/quickstart.ipynb
@@ -574,7 +574,7 @@
     "metrics_mean = {'loss': 0, 'accuracy': 0}\n",
     "for loss, acc in zip(metrics['loss'], metrics['accuracy']):\n",
     "    metrics_mean['loss'] += loss\n",
-    "    metrics_mean['accuracy'] += acc.data[0]\n",
+    "    metrics_mean['accuracy'] += acc.item()\n",
     "\n",
     "qtd = len(metrics['loss'])\n",
     "\n",
